{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 137,
  "lineage": "0642278f-09b5-b03d-4daf-7c9f773f6826",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/bermet-my-alb/e9120965678e3c2c",
            "arn_suffix": "app/bermet-my-alb/e9120965678e3c2c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bermet-my-alb-1077895782.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/bermet-my-alb/e9120965678e3c2c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bermet-my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfc7e9e6f98d5943"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d57aae785ca0b91"
              },
              {
                "subnet_id": "subnet-0a959d9f853332769"
              },
              {
                "subnet_id": "subnet-0ba3025f45818107c"
              }
            ],
            "subnets": [
              "subnet-01d57aae785ca0b91",
              "subnet-0a959d9f853332769",
              "subnet-0ba3025f45818107c"
            ],
            "tags": {
              "Name": "bermet-my-alb",
              "Namespace": "bermet-my-alb"
            },
            "tags_all": {
              "Name": "bermet-my-alb",
              "Namespace": "bermet-my-alb"
            },
            "vpc_id": "vpc-0822c060ef50f06ff",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.alb.module.access_logs.module.s3_bucket.module.aws_s3_bucket.aws_s3_bucket.default",
            "module.autoscaling.aws_security_group.sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:listener/app/bermet-my-alb/e9120965678e3c2c/41b1b8fdd9edc9d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:targetgroup/Bermet-TG/5567cff5f5111f7a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381491958741:listener/app/bermet-my-alb/e9120965678e3c2c/41b1b8fdd9edc9d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/bermet-my-alb/e9120965678e3c2c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "bermet-my-alb",
              "Namespace": "bermet-my-alb"
            },
            "tags_all": {
              "Name": "bermet-my-alb",
              "Namespace": "bermet-my-alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.alb.module.access_logs.module.s3_bucket.module.aws_s3_bucket.aws_s3_bucket.default",
            "module.autoscaling.aws_security_group.sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381491958741:targetgroup/Bermet-TG/5567cff5f5111f7a",
            "arn_suffix": "targetgroup/Bermet-TG/5567cff5f5111f7a",
            "deregistration_delay": "15",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381491958741:targetgroup/Bermet-TG/5567cff5f5111f7a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:381491958741:loadbalancer/app/bermet-my-alb/e9120965678e3c2c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Bermet-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Attributes": "default",
              "Name": "bermet-my-alb-default",
              "Namespace": "bermet-my-alb"
            },
            "tags_all": {
              "Attributes": "default",
              "Name": "bermet-my-alb-default",
              "Namespace": "bermet-my-alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:security-group/sg-0dfc7e9e6f98d5943",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0dfc7e9e6f98d5943",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240502204007708400000003",
            "name_prefix": "terraform-",
            "owner_id": "381491958741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088a44b89acd24b9d",
            "arn": "arn:aws:ec2:us-east-1:381491958741:elastic-ip/eipalloc-088a44b89acd24b9d",
            "association_id": "eipassoc-08379628c24fc9614",
            "domain": "vpc",
            "id": "eipalloc-088a44b89acd24b9d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a008129135759d60",
            "private_dns": "ip-10-0-1-161.ec2.internal",
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-3-92-220-198.compute-1.amazonaws.com",
            "public_ip": "3.92.220.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Bermet-eip"
            },
            "tags_all": {
              "Name": "Bermet-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:internet-gateway/igw-0e32a292d4715192f",
            "id": "igw-0e32a292d4715192f",
            "owner_id": "381491958741",
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088a44b89acd24b9d",
            "association_id": "eipassoc-08379628c24fc9614",
            "connectivity_type": "public",
            "id": "nat-0d73cb7be2fa977b9",
            "network_interface_id": "eni-0a008129135759d60",
            "private_ip": "10.0.1.161",
            "public_ip": "3.92.220.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba3025f45818107c"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-031952eac777ebddc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d73cb7be2fa977b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031952eac777ebddc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.NAT",
            "module.networking.aws_route_table.private-rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e32a292d4715192f",
            "id": "r-rtb-0458354c497176ae21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0458354c497176ae2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public-rt",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:route-table/rtb-031952eac777ebddc",
            "id": "rtb-031952eac777ebddc",
            "owner_id": "381491958741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d73cb7be2fa977b9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:route-table/rtb-0458354c497176ae2",
            "id": "rtb-0458354c497176ae2",
            "owner_id": "381491958741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e32a292d4715192f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a021e576ed1969",
            "route_table_id": "rtb-031952eac777ebddc",
            "subnet_id": "subnet-0048f852aa5f34086"
          },
          "dependencies": [
            "module.networking.aws_route_table.private-rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7c955331804881",
            "route_table_id": "rtb-031952eac777ebddc",
            "subnet_id": "subnet-0f242c002051303e9"
          },
          "dependencies": [
            "module.networking.aws_route_table.private-rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d72d70e285f5fc",
            "route_table_id": "rtb-031952eac777ebddc",
            "subnet_id": "subnet-0c4ad135711b002bf"
          },
          "dependencies": [
            "module.networking.aws_route_table.private-rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048083cc8ef122e9d",
            "route_table_id": "rtb-0458354c497176ae2",
            "subnet_id": "subnet-0ba3025f45818107c"
          },
          "dependencies": [
            "module.networking.aws_route_table.public-rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e597d599e37d20b1",
            "route_table_id": "rtb-0458354c497176ae2",
            "subnet_id": "subnet-0a959d9f853332769"
          },
          "dependencies": [
            "module.networking.aws_route_table.public-rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c29675e3d397eb31",
            "route_table_id": "rtb-0458354c497176ae2",
            "subnet_id": "subnet-01d57aae785ca0b91"
          },
          "dependencies": [
            "module.networking.aws_route_table.public-rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0048f852aa5f34086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0048f852aa5f34086",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-private-subnet-10.0.4.0/24"
            },
            "tags_all": {
              "Name": "Bermet-private-subnet-10.0.4.0/24"
            },
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0f242c002051303e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f242c002051303e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-private-subnet-10.0.5.0/24"
            },
            "tags_all": {
              "Name": "Bermet-private-subnet-10.0.5.0/24"
            },
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0c4ad135711b002bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4ad135711b002bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-private-subnet-10.0.6.0/24"
            },
            "tags_all": {
              "Name": "Bermet-private-subnet-10.0.6.0/24"
            },
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0ba3025f45818107c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba3025f45818107c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-public-subnet-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "Bermet-public-subnet-10.0.1.0/24"
            },
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-0a959d9f853332769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a959d9f853332769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-public-subnet-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "Bermet-public-subnet-10.0.2.0/24"
            },
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:subnet/subnet-01d57aae785ca0b91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d57aae785ca0b91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491958741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bermet-public-subnet-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "Bermet-public-subnet-10.0.3.0/24"
            },
            "vpc_id": "vpc-0822c060ef50f06ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491958741:vpc/vpc-0822c060ef50f06ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d3bb6c7df31fc4a",
            "default_route_table_id": "rtb-017269af21f517f9f",
            "default_security_group_id": "sg-07845e24730c0795a",
            "dhcp_options_id": "dopt-0b30db26f8a12ea76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0822c060ef50f06ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017269af21f517f9f",
            "owner_id": "381491958741",
            "tags": {
              "Name": "Bermet"
            },
            "tags_all": {
              "Name": "Bermet"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}